# label-verify

./: .env.example  .gitignore  INSTALL.md  Makefile  README.md  SUMMARY.md  TTB_Class_and_Type_Designations.md  TTB_Universal_Mandatory_Label_Elements.md  curl_commands.md  docker-compose.yml
contracts/: ocr_response.golden.json
evals/: README.md
evals/batches/: results.json  sample.json
evals/cases/: adversarial_abv_near_miss_cached.json  adversarial_brand_near_miss_cached.json  adversarial_class_mismatch_cached.json  adversarial_net_contents_wrong_cached.json  adversarial_warning_altered_cached.json  adversarial_warning_header_miscased_cached.json  assignment_no_double_claim_cached.json  display_line_class_reuse_vodka_cached.json  generated_apple_brandy.json  generated_blueberry_liqueur.json  generated_rye_whiskey.json  name_address_producer_city_state_cached.json  pom_cherry_cordial_cached.json  single_malt_taxonomy_cached.json  single_word_class_qualified_cached.json  synthetic_consistent_cached.json  unicode_foreign_blocks_cached.json
evals/images/ocr_snapshots/: generated_bourbon_gov_warning_no_contents.json  (+4 more)
evals/label_data/: generated_labels.json
evals/scripts/: generate_label_fixtures.py
scripts/: deploy_gcp_interactive.sh
services/api/: .dockerignore  .gcloudignore  Dockerfile  go.mod  go.sum
services/judge/: Dockerfile  app.py  pyproject.toml  test_app.py
services/ocr/: .dockerignore  .gcloudignore  Dockerfile  Makefile  app.py  preprocess.py  pyproject.toml  recognizer.py  test_app.py  test_contract.py  test_preprocess.py  test_recognizer.py
(+45 files in other folders)
