[project]
name = "labelverify-judge"
version = "0.1.0"
description = "Pydantic-validated local/Vertex judge service for borderline label verification fields"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.124.0",
    "google-genai>=2.8.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pytest>=9.0.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]
